# planit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  example_vsc_args.py  pyproject.toml
src/planit/: __init__.py  planit.py
tests/: test_planit.py
