[project]
name = "planit"
version = "0.1.0"
description = "Declaratively build workflow DAGs for SLURM clusters"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Wessel Poelman" }]
keywords = ["slurm", "workflow", "dag", "hpc", "submitit"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "submitit>=1.5.4",
]

[project.urls]
Repository = "https://github.com/WPoelman/planit"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
